 - Use CPU time as primary limit (port from ETH tree).
 - Move checktestdata code to separate library for easier use in
   stand-alone checkers, and add 'IF() [ELSE] END' syntax.
 - Add option to display pending submissions on the scoreboard.
 - Remove 'identify daemon' experimental code. It hasn't been
   working for years and no-one discovered that.
 - Merge all MySQL users into one omnipotent user (previously
   domjudge_jury). The differences between the levels were
   getting to a point where the separation provided not enough
   added benefit anymore. You should remove the users
   domjudge_{team,public,plugin} from MySQL and dbpasswords.secret.

Version 3.2.0 - SVN r3594 (unreleased)
--------------------------------------
 - Add better support for interactive problems, add sample problem.
 - New, redesigned single page "dashboard" team web interface.
 - Change execute() function for more flexible I/O redirection.
 - Add runpipe program for connecting stdin/out of two processes.
 - Rename compare_program.sh to *_wrapper, allow symlinked usage.
 - Add FLOAT command and exponentiation to checktestdata program.
 - Add countdown before contest and timezone to clock.
 - Add daemon support in C/PHP libraries, use for submit/judgedaemon.
 - Add category to balloons list and button to view only unsent.
 - Lots of small changes to C/C++ sources and build system for better
   POSIX compliance and portability; support LLVM clang compiler.
 - Replace bash by POSIX shell in compile, testcase_run. (Closes: #1735673)
 - Create separate execdir subdir for judging. (Closes: #3041492)
 - Replace setuid root installation of runguard with invocation
   via sudo.
 - Fix missing permissions for plugin interface SQL user.
 - Remove CHROOTDIR (mountpoint prefix) variable to avoid confusion
   with the directory where the Java chroot was created.
 - Redirect to submissions overview page after verification.
 - Fix information leak in clarification problems list. (Closes: #3096018)