@@ -3,7 +3,6 @@ if ( !defined('LIBDIR') ) die ("LIBDIR not defined.");
 
 require(LIBDIR . '/lib.error.php');
 require(LIBDIR . '/lib.misc.php');
-require(LIBDIR . '/lib.config.php');
 require(LIBDIR . '/lib.dbconfig.php');
 require(LIBDIR . '/use_db.php');
 
