@@ -34,6 +34,8 @@ Version 3.3.0 - DEV
  - Add option to display pending submissions on the scoreboard.
  - Remove 'identify daemon' experimental code. It hasn't been
    working for years and no-one discovered that.
+ - Remove 'lib.config' experimental library for INI-file configuration.
+   It was unused and we're moving to DB stored config with lib.dbconfig.
  - Merge all MySQL users into one omnipotent user (previously
    domjudge_jury). The differences between the levels were
    getting to a point where the separation provided not enough
